--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,13 @@ body {
   box-shadow: 0 0px 36px 2px rgb(177 109 85 / 36%) inset;
 
 }
+
+.symbol {
+  font-family: "Noto Sans Symbols 2", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 .main {
   font-size: 1.25em;
 }
